force-app/main/default/objects/Community_Alert__e/Community_Alert__e.object-meta.xml
<CustomObject>
    <description>Published to communicate information to the logged in community user based on database events</description>
    <label>Community Alert</label>
    <pluralLabel>Community Alerts</pluralLabel>
</CustomObject>