force-app/main/default/objects/Community_Alert__e/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Enter &apos;Add&apos; to add an alert to the display. Enter &apos;Remove&apos; or &apos;Update&apos; to remove or update alerts related to the Record Id.</description>
    <label>Action</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>