force-app/main/default/objects/Community_Alert__e/fields/Toast_Mode__c.field-meta.xml
<CustomField>
    <fullName>Toast_Mode__c</fullName>
    <description>Determines how persistent the toast is. Valid values are: &apos;dismissible&apos; (default), remains visible until you click the close button or 3 seconds has elapsed, whichever comes first; &apos;pester&apos;, remains visible for 3 seconds and disappears automatically. No close button is provided; &apos;sticky&apos;, remains visible until you click the close button.</description>
    <label>Toast Mode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>