force-app/main/default/objects/Community_Alert__e/fields/Toast_Title__c.field-meta.xml
<CustomField>
    <fullName>Toast_Title__c</fullName>
    <description>If showing a toast message, optionally define a title</description>
    <label>Toast Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>